--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "9300:9300"
     volumes:
       - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
-      #- elasticsearch-volume:/usr/share/elasticsearch/data
+      - elasticsearch-volume:/usr/share/elasticsearch/data
     networks:
       - net
 
